--- a/vignettes/PPspectra.ltx
+++ b/vignettes/PPspectra.ltx
@@ -122,29 +122,33 @@
 \maketitle
 \tableofcontents
 \section{Introduction}
-We could find no package in R that explicitly offered the calculation of an energy spectra for a point process.  However
-the Chronux Matlab package offered this. We have taken a small number of functions and recoded them in R. We have kept
+We could find no package in R that explicitly offered the calculation of an energy spectra for a point process.  
+The Chronux Matlab package offered this so we have taken a small number of functions and coded them in R. We have kept
 the same names ( \texttt{mtspectrumpt} and \texttt{coherencypt}) for uses familiar with Chronux, but the calling
-parameters may have changed slightly.
+parameters may have changed.
 
   
 \section{point processes}
-A time series $Y$ is a wiggly line $Y(t), -\infty < t < \infty$. A point process $N$ is a collection of times
+As \cite{Brillinger.1994} says ``A time series $Y$ is a wiggly line $Y(t), -\infty < t < \infty$. A point process $N$ is a collection of times
 $\{\tau_j, j = 0, \pm 1,\pm 2, \ldots\}$. (It will be assumed that the $\tau_j$ are distinct.) A marked point process
-$J$ is a collection of times and associated quantities (marks) $\{(\tau_j,M_j), j = 0, \pm 1,\pm 2, \ldots \}$
-\cite{Brillinger.1994}.  So say we have a point process and want to caclulate the energy spectrum.
+$J$ is a collection of times and associated quantities (marks) $\{(\tau_j,M_j), j = 0, \pm 1,\pm 2, \ldots \}$.''
 
-The Dirac delta can be loosely thought of as a discontinuous function on the real line which is zero everywhere except
-at the origin, where it is undefined (or infinite, if you prefer);
+So say we have a point process. Now as \citeauthor{Brillinger.1994} says, this is just a collection of times and it can be
+specified in a number of ways as show in figure \ref{figure:point_process.png}. In the neuroscience literature
+\cite[]{Eden.2019,Pouzat.and.Chaffiol.2009} the firing times of neurons yield a point process that is often analysed as a
+``spike train'' where each event is an electrical pulse.
+
+An electrial pulses like this is commonly analysed as a Dirac delta. The Dirac delta can be loosely thought of as a
+discontinuous function on the real line which is zero everywhere except at the origin, where it is undefined (or
+infinite, if you prefer);
 \[
-  \delta (x)={\begin{cases}+\mathrm{ undefined } ,&x=0\\0,&x\neq 0.\end{cases}}
+  \delta (x)={\begin{cases}\mathrm{ undefined } ,&x=0\\0,&x\neq 0.\end{cases}}
   \]
 However, it has the property that, for some mild conditions on $f$
 \[
   \int _{-\infty }^{\infty }f(x)\,\delta(x) dx=f(0).
 \]
-
-The Dirac delta is a generalized function. No function in the traditional sense has this properties.
+The Dirac delta is a generalized function. No function in the traditional sense has this property.
 
 \begin{figure}[tbhp]
   \centering
@@ -154,36 +158,42 @@ The Dirac delta is a generalized function. No function in the traditional sense 
 \end{figure}
 %http://www.stat.columbia.edu/~liam/teaching/neurostat-fall19/uri-eden-point-process-notes.pdf
 
+\FloatBarrier
 \section{Fourier transform of a pulse or spike}
-A point process can be specified in several different ways (figure \ref{figure:point_process.png}). However,  
-
-
-Energy spectral density describes how the energy of a signal or a time series is distributed with frequency. 
+Define the energy of a signal or a time series as
 \[
    E=\int _{-\infty }^{\infty }|x(t)|^{2}\,dt.
  \]
-
-The energy spectral density is most suitable for transients - that is, pulse-like signals - having a finite total energy. 
-In this case, Parseval's theorem gives us an alternate expression for the energy of the signal:
+An energy spectral density describes how the energy is distributed with frequency. 
+Parseval's theorem gives us an alternate expression for the energy of the signal:
 \[
   \int _{-\infty }^{\infty }|x(t)|^{2}\,dt=\int _{-\infty }^{\infty }|{\hat {x}}(f)|^{2}\,df,
   \]
 where
-$\hat {x}(f)=\int _{-\infty }^{\infty }e^{-2\pi ift}x(t)\,dt,$ is the Fourier transform of the signal and
-$f$ is the frequency in Hz, i.e., cycles per second. Since the integral on the right-hand side is the energy of the signal, the integrand 
+\[
+  \hat {x}(f)=\int _{-\infty }^{\infty }e^{-2\pi ift}x(t)\,dt
+\]
+is the Fourier transform of the signal and
+$f$ is the frequency in Hz (cycles per second). Since the integral on the right-hand side is the energy of the signal, the integrand 
 $\left|{\hat {x}}(f)\right|^{2}$ can be interpreted as a density function describing the energy per unit frequency contained in the signal at 
 the frequency $f$. In light of this, the energy spectral density of a signal $x ( t )$ is defined as
 $S_{xx}(f)=\left|{\hat {x}}(f)\right|^{2}$.
 	
-The above definition of energy spectral density is suitable for transients (pulse-like signals) whose energy is
-concentrated around one time window; then the Fourier transforms of the signals generally exist. For continuous signals
-over all time, such as stationary processes, one must rather define the power spectral density (PSD); this describes how
-power of a signal or time series is distributed over frequency, as in the simple example given previously. Here, power
-can be the actual physical power, or more often, for convenience with abstract signals, is simply identified with the
-squared value of the signal. For example, statisticians study the variance of a function over time $x(t)$
-\cite{wiki:Spectral_density}.
+%The above definition of energy spectral density is suitable for transients (pulse-like signals) whose energy is
+%concentrated around one time window; then the Fourier transforms of the signals generally exist. For continuous signals
+%over all time, such as stationary processes, one must rather define the power spectral density (PSD); this describes how
+%power of a signal or time series is distributed over frequency, as in the simple example given previously. Here, power
+%can be the actual physical power, or more often, for convenience with abstract signals, is simply identified with the
+%squared value of the signal. For example, statisticians study the variance of a function over time $x(t)$
+%\cite{wiki:Spectral_density}.
 
 %http://rundle.physics.ucdavis.edu/PHYGEO30/Fourier_Transforms.pdf
+
+
+The autocovariance is a function that gives the covariance of the process with itself at pairs of time
+points.
+%https://www.egr.msu.edu/classes/ece458/radha/ss07Keyur/Lab-Handouts/PSDESDetc.pdf
+
 
 \begin{itemize}
 \item \cite{Jarvis.and.Mitra.2001}
