--- a/vignettes/integration_sites.bib
+++ b/vignettes/integration_sites.bib
@@ -316,3 +316,13 @@
   url =		 "https://en.wikipedia.org/wiki/Wavelet_transform",
   note =	 "[Online; accessed Wednesday, March 25, 2020]"
 }
+
+@Manual{r.2013,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2013},
+    url = {http://www.R-project.org/},
+  }
+
