many changes, to documentation, alling argumetns and retun values

--- a/vignettes/PPspectra.ltx
+++ b/vignettes/PPspectra.ltx
@@ -112,10 +112,8 @@
 \newsavebox\ltmcbox
 
 \title{Energy Spectra and Coherence for Point Processes}
-\author{}
+\author{Rob Dunne,  Suzanne Scott, Laurence Wilson, Claus Hallwirth}
 \date{Tuesday, June 16, 2020}
-
-
 \begin{document}
 %\setkeys{Gin}{width=8cm}
 \setkeys{Gin}{height=8cm,width=0.9\columnwidth}
@@ -254,6 +252,7 @@ such that
 The basic idea of multitaper spectral estimation is to average
 the spectral estimates from several orthogonal tapers.
 \section{Example 1}
+Need a simulated example here
 
 \section{Example 2}
 X-linked severe combined immunodeficiency (SCID-X1) is an inherited disease caused by inactivating mutations in the gene
