--- a/vignettes/PPspectra.Rnw
+++ b/vignettes/PPspectra.Rnw
@@ -2,5 +2,5 @@
 \usepackage{pdfpages}
 %\VignetteIndexEntry{author2019mypaper}
 \begin{document}
-\includepdf[pages=-, fitpaper=true]{PPspectra.pdf}
+\includepdf[pages=-, fitpaper=true]{tt.pdf}
 \end{document}
