--- a/vignettes/PPspectra.Rnw
+++ b/vignettes/PPspectra.Rnw
@@ -2,6 +2,16 @@
 %%\DeclareGraphicsExtensions{.pdf,.eps}
 
 %% need no \usepackage{Sweave}
+\usepackage{geometry}
+ \geometry{
+ a4paper,
+% total={210mm,297mm}
+% }
+ left=17mm,
+ right=23mm,
+ top=20mm,
+ bottom=20mm,
+ }
 
 \usepackage{url}
 \usepackage{rotating}
@@ -243,41 +253,47 @@ The assumption of the Fourier transform is that all signals can be expressed as 
 sinusoidal) components with varying amplitude and phase.  If a non-periodic signal is defined over a finite time span,
 it can be considered to be one part of a periodic signal and we can take its Fourier transform.
 
-Sampling in the time domain has a close relationship to frequency in the spectral domain. 
-The frequency resolution is defined as Fs/N, where Fs is sample frequency, N is number of data points. For
-example, if the sample frequency is 1000 Hz and the number of data points is 1000, then the
-frequency resolution is equal to 1000 Hz/1000 = 1 Hz.
+Sampling in the time domain has a close relationship to frequency in the spectral domain.  The frequency resolution is
+defined as Fs/N, where Fs is sample frequency, N is number of data points. For example, if the sample frequency is 1000
+Hz and the number of data points is 1000, then the frequency resolution is equal to 1000 Hz/1000 = 1 Hz.
 
-The code for generating hpp.event.times relies on the \texttt{rexp} function
-which generates 64 bit floating point numbers (like all of Rs computations).
-This means the the smallest interval that can be measured is  \texttt{.Machine\$double.eps=  2.2e-16},
-and we we have about $10^{15}$ points in the interval $[0,1]$.
+The code for generating \texttt{hpp.event.times} relies on the \texttt{rexp} function which generates 64 bit floating point
+numbers (like all of Rs computations).  This means the the smallest interval that can be measured is
+\texttt{.Machine\$double.eps= 2.2e-16}, and we we have about $10^{15}$ points in the interval $[0,1]$.
 
 The resolution of the data (provided it is small enough) does not adversely affect computations in the time domain. However in the frequency domain
-this becomes very important.
+this becomes very important. In the genomics example the sampling frequence is the base-pair (each A, T, G or C in the
+genome). In other examples the sampling rate is not so clear.
 
+We simulalate some data with a rate of $\lambda=300 hz$ (cycles per second) and 
 
-
-\begin{lstlisting}[caption=Example 1., label=listing1]
+\begin{lstlisting}
   library(PPspectra)
+  set.seed(123)
+  aa1<-hpp.event.times(rate=300, 300)
+  set.seed(124)
+  aa2<-hpp.event.times(rate=300, 300)
   
-  #300 events per second -- \lambda -- the rate
-#want 300 events -- so will run until we get 300 
-set.seed(123)
-aa1<-hpp.event.times(rate=300, 300)
-set.seed(124)
-aa2<-hpp.event.times(rate=300, 300)
+  bw <- bw.SJ(aa1)
+  smooth <- density(aa1,bw=bw/10,n = 1000)
+  print(smooth$bw)
+  plot(smooth$x,smooth$y,type="l")
+  rug(aa1)
+\end{lstlisting}
 
-bw <- bw.SJ(aa1)
-smooth <- density(aa1,bw=bw/10,n = 1000)
-print(smooth$bw)
-plot(smooth$x,smooth$y,type="l")
-rug(aa1)
+\begin{figure}[tbhp]
+  \centering
+  \includegraphics[width=\textwidth,totalheight=4.5cm]{./figs/hpp.png}
+  \caption{We plot the data as a \texttt{rug} and fit a kernel smooth (with a small bandwidth to catch more varaibility)}
+  \label{figure:hpp.png}
+\end{figure}
 
 
 
-#I am setting the sampling frequency to 600. That is, the signal is sampled 600 times a second.
-# this has to be high enough that the time difference between spikes in aa1 is greater than the sampling intervale
+
+I am setting the sampling frequency to 600. That is, the signal is sampled 600 times a second.  This has to be high
+enough that the time difference between spikes in \texttt{aa1} is greater than the sampling interval.
+\begin{lstlisting}
 S1<-mtspectrumpt(aa1, Fs  =   10000)
 plot(S1$f, S1$S,type="l",col="red")
 S1<-mtspectrumpt(aa1, Fs  =   1000)
@@ -286,10 +302,20 @@ S1<-mtspectrumpt(aa1, Fs  =   600)
 lines(S1$f, S1$S,type="l",col="blue")
 S1<-mtspectrumpt(aa1, Fs  =   300)
 lines(S1$f, S1$S,type="l",col="green")
+\end{lstlisting}
 
-#what difference do nw and k make
-# k A positive integer, the number of tapers, often 2*nw for spectrum estimation purposes.
-# nw A positive double-precision number, the time-bandwidth parameter.
+\begin{figure}[tbhp]
+  \centering
+  \includegraphics[width=\textwidth,totalheight=4.5cm]{./figs/varying_Fs.png}
+  \caption{}
+  \label{figure:varying_Fs.png}
+\end{figure}
+
+what difference do nw and k make
+k A positive integer, the number of tapers, often 2*nw for spectrum estimation purposes.
+nw A positive double-precision number, the time-bandwidth parameter.
+
+\begin{lstlisting}
 S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 3,  k = 5)
 plot(S1$f, S1$S,type="l",col="red")
 S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 50,  k = 5)
@@ -298,44 +324,55 @@ S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 3,  k = 99)
 lines(S1$f, S1$S,type="l",col="orange")
 S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 50,  k = 99)
 lines(S1$f, S1$S,type="l",col="black",lwd=2)
+\end{lstlisting}
+\begin{figure}[tbhp]
+  \centering
+  \includegraphics[width=\textwidth,totalheight=4.5cm]{./figs/varying_nw_k.png}
+  \caption{}
+  \label{figure:varying_nw_k.png}
+\end{figure}
 
-
+\begin{lstlisting}
 S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 50,  k = 99,pad=1)
 plot(S1$f, S1$S,type="l",col="red")
 S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 50,  k = 99,pad=5)
 lines(S1$f, S1$S,type="l",col="blue")
 S1<-mtspectrumpt(aa1, Fs  =   10000,nw = 50,  k = 99,pad=10)
 lines(S1$f, S1$S,type="l",col="blue")
+\end{lstlisting}
 
-
-
-set.seed(100)
-bb1<-hpp.event.times(rate=600, 600)
-smooth <- density(bb1,n = 1000,from=0,to=1)
-plot(smooth$x,smooth$y,type="l")
-rug(bb1)
-smooth <- density(aa1,n = 1000,from=0,to=1)
-lines(smooth$x,smooth$y,col="red")
-smooth <- density(aa2,n = 1000,from=0,to=1)
-lines(smooth$x,smooth$y,col="green")
-
+\begin{lstlisting}
 S1<-mtspectrumpt(aa1, Fs  =   10000)
 plot(S1$f, S1$S,type="l",col="red",ylim=c(0,800))
 S1<-mtspectrumpt(aa2, Fs  =   10000)
 lines(S1$f, S1$S,type="l",col="black")
 S1<-mtspectrumpt(bb1, Fs  =   10000)
 lines(S1$f, S1$S,type="l",col="green")
+\end{lstlisting}
+\begin{figure}[tbhp]
+  \centering
+  \includegraphics[width=\textwidth,totalheight=4.5cm]{./figs/effect_rate_on_spectra.png}
+  \caption{}
+  \label{figure:varying_nw_k.png}
+\end{figure}
 
 
+\begin{lstlisting}[caption=Example 1., label=listing1]
 cc1<-coherencypt(aa1,aa2, Fs  =   10000,fpass = c(0, 5000))
 plot(cc1$f, cc1$C12,ylim=c(0,0.3),type="l",col="blue")
 cc1<-coherencypt(aa1,bb1, Fs  =   10000,fpass = c(0, 5000))
 lines(cc1$f, cc1$C12,col="red")
 \end{lstlisting}
+\begin{figure}[tbhp]
+  \centering
+  \includegraphics[width=\textwidth,totalheight=4.5cm]{./figs/coherency_example1.png}
+  \caption{}
+  \label{figure:varying_nw_k.png}
+\end{figure}
 
-\section{Example 2}
+\section{Example 2 -- non-homogeneous simulated data}
 
-\section{Example 3}
+\section{Example 3 -- viral inegrations}
 X-linked severe combined immunodeficiency (SCID-X1) is an inherited disease caused by inactivating mutations in the gene
 encoding the interleukin 2 receptor common gamma chain (IL2RG), which is located on the X-chromosome.
 SCID-X1 gene therapy clinical trials were conducted in Paris and London. The clinical results differed and the
